<resources>
    <string name="app_name">Vam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="textview">TextView</string>
    <string name="first_screen">First screen</string>
    <string name="next">Next</string>
    <string name="third_screen">Third Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="finish">Finish</string>
</resources>